// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexHeader matches the snapshot with borderBottom prop 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-root-215 makeStyles-borderBottom-217 MuiGrid-container"
    data-testid="flex-header"
  >
    <div>
      Test
    </div>
  </div>
</div>
`;

exports[`FlexHeader matches the snapshot with both marginTop and borderBottom prop 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-root-322 makeStyles-borderBottom-324 makeStyles-marginTop-323 MuiGrid-container"
    data-testid="flex-header"
  >
    <div
      data-testid="flex-header-content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`FlexHeader matches the snapshot with marginTop prop 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-root-108 makeStyles-marginTop-109 MuiGrid-container"
    data-testid="flex-header"
  >
    <div>
      Test
    </div>
  </div>
</div>
`;

exports[`FlexHeader matches the snapshot with no props 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-root-1 MuiGrid-container"
    data-testid="flex-header"
  >
    <div>
      Test
    </div>
  </div>
</div>
`;
